--- a/index.html
+++ b/index.html
@@ -1552,7 +1552,7 @@ img {
 
 /* Green line over old price */
 .old-price {
-    color: green; /* Set color of the text to green */
+    color: red; /* Set color of the text to green */
     position: relative; /* Position relative for positioning the line */
 }
 
@@ -1562,7 +1562,7 @@ img {
     top: 50%; /* Position at the middle of the text */
     left: 0; /* Start from the beginning of the text */
     width: 100%; /* Make the line span the width of the text */
-    border-top: 2px solid rgb(120, 235, 120); /* Set the line style */
+    border-top: 2px solid rgb(252, 129, 129); /* Set the line style */
 }
 
 /* Green line over old price */
@@ -1666,9 +1666,11 @@ img {
                                         <path d="M1915.918 737.475c-10.955-33.543-42.014-56.131-77.364-56.131h-612.029l-189.063-582.1v-.112C1026.394 65.588 995.335 43 959.984 43c-35.237 0-66.41 22.588-77.365 56.245L693.443 681.344H81.415c-35.35 0-66.41 22.588-77.365 56.131-10.955 33.544.79 70.137 29.478 91.03l495.247 359.831-189.177 582.212c-10.955 33.657 1.13 70.25 29.817 90.918 14.23 10.278 30.946 15.487 47.66 15.487 16.716 0 33.432-5.21 47.775-15.6l495.134-359.718 495.021 359.718c28.574 20.781 67.087 20.781 95.662.113 28.687-20.668 40.658-57.261 29.703-91.03l-189.176-582.1 495.36-359.83c28.574-20.894 40.433-57.487 29.364-91.03" fill-rule="evenodd"/>
                                     </svg>
                                 </span>
-                                <strong class="reviews-star__rating">5.0</strong>
-                                <span class="reviews-star__count">(245 reviews)</span>
+                                <span><strong class="reviews-star__number">4.9</strong></span><br>
+                                <!-- <span class="reviews-star__count">(49 reviews)</span> -->
+                                
                             </a>
+                            <span class="reviews-star__text">Based on <b>48</b> reviews</span>
                         </div>
                     </div>
                     <h1 class="title">Siestly Pillow</h1>
